@@ -1639,8 +1639,8 @@ class User {
 
 	/**
 	 * Get the list of implicit group memberships this user has.
-	 * This includes all explicit groups, plus 'user' if logged in
-	 * and '*' for all accounts.
+	 * This includes all explicit groups, plus 'user' if logged in,
+	 * '*' for all accounts and autopromoted groups
 	 * @param boolean $recache Don't use the cache
 	 * @return array of strings
 	 */
